feat: add api endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=ramengo
 spring.profiles.active=test
 spring.jpa.open-in-view=false
+
+orderid.api.base_url=https://api.tech.redventures.com.br/orders/generate-id
