--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<mainClass>br.com.guilchaves.ramengo.RamengoApplication</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
