--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ramengo
 spring.profiles.active=prod
 spring.jpa.open-in-view=false
-
+server.port=${PORT:8080}
 orderid.api.base_url=https://api.tech.redventures.com.br/orders/generate-id
